--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,47 +13,43 @@ dependencies = [
     # Data manipulation
     "polars>=0.20.0",
     "numpy>=1.24.0",
-    
     # HTTP client
     "httpx>=0.24.0",
-    
     # Data validation and configuration
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
-    
     # Google Cloud
     "google-cloud-bigquery>=3.11.0",
     "google-cloud-storage>=2.10.0",
-    
     # Database
     "sqlalchemy>=2.0.0",
     "psycopg2-binary>=2.9.0",
-    
     # API Framework
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
-    
     # Visualization
     "streamlit>=1.28.0",
     "plotly>=5.17.0",
     "altair>=5.1.0",
-    
     # ML
     "scikit-learn>=1.3.0",
     "xgboost>=2.0.0",
     "mlflow>=2.8.0",
-    
     # Orchestration
     "prefect>=2.14.0",
-    
     # Logging
     "structlog>=23.1.0",
     "rich>=13.0.0",
-    
     # Utilities
     "click>=8.1.0",
     "pyyaml>=6.0.0",
+    "nflreadpy>=0.1.4",
+    "seaborn>=0.13.2",
+    "matplotlib>=3.10.7",
+    "db-dtypes>=1.4.3",
+    "dbt-bigquery>=1.10.2",
+    "dbt-core>=1.10.13",
 ]
 
 [project.optional-dependencies]
@@ -87,10 +83,6 @@ dbt = [
     "dbt-core>=1.7.0",
     "dbt-bigquery>=1.7.0",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [tool.ruff]
 # Set the maximum line length
@@ -189,4 +181,9 @@ exclude_lines = [
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=7.0.1",
 ]
