--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "db-dtypes>=1.4.3",
     "dbt-bigquery>=1.10.2",
     "dbt-core>=1.10.13",
+    "bs4>=0.0.2",
 ]
 
 [project.optional-dependencies]
@@ -182,8 +183,10 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
 ]
-
 [dependency-groups]
 dev = [
     "ipykernel>=7.0.1",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=5.1.0",
 ]
+
