--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "xgboost>=2.0.0",
     "mlflow>=2.8.0",
     # Orchestration
-    "prefect>=2.14.0",
+    "apache-airflow>=2.8.0",
+    "apache-airflow-providers-google>=10.0.0",
     # Logging
     "structlog>=23.1.0",
     "rich>=13.0.0",
